fix(styles): fix accordion with truncated header

--- a/packages/styles/src/components/accordion.scss
+++ b/packages/styles/src/components/accordion.scss
@@ -24,6 +24,8 @@
 
   width: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
   padding-block: accordion.$accordion-button-padding;
   padding-inline-start: accordion.$accordion-button-padding;
   padding-inline-end: accordion.$accordion-button-padding + accordion.$accordion-icon-size;
